--- a/app/scripts/content/templates.css
+++ b/app/scripts/content/templates.css
@@ -25,12 +25,13 @@
 }
 #linkedInExt-personForm.show {
     display: block;
-    width: 400px;
+    width: 300px;
     height: auto;
-    left: 50%;
-    bottom: 50%;
+    right: 20px;
+    top: 100px;
     margin-left: -200px;
     margin-bottom: -175px;
+    box-shadow: 0px 0px 50px #000;
 }
 .linkedInExt-close {
     float: right;
@@ -80,20 +81,24 @@ textarea.linkedInExt-input {
     padding-bottom: 10px;
 }
 #linkedInExt-tags {
-	border-radius: 0;
+    border-radius: 0;
 }
 #linkedInExt-personPreview {
-	bottom:0;
-	right:0;
-	z-index:9999;
-	position:fixed;
-	width:300px;
-	height:auto;
-	color:#fff;
-	display: none;
-	background: #000;
+    padding: 10px;
+    bottom:16px;
+    right:16px;
+    font-size: 12px;
+    z-index:9999;
+    position:fixed;
+    width:300px;
+    height:auto;
+    color:#fff;
+    display: none;
+    background: #000;
+    box-shadow: 0px 0px 50px #000;   
+    background-color: #466; 
 }
 
 #linkedInExt-personPreview.show{
-	display: block;
+    display: block;
 }
